-------------
Version 0.8.1
-------------

TOOLKIT

  * General

- StorageObject and its subclasses (e.g. S3Object) now include a
  convenience constructor that accepts byte array data.
- Fixed incorrect file path for XMLBuilder library in shell scripts.

  * S3Service

- Added support for Multipart Uploads.

  * CloudFront Service

- Added support for custom (non-S3) distribution origins (API 2010-11-01).

COCKPIT

- Fixed nasty bug that prevented directories from being included when 
  uploading files.


-------------
Version 0.8.0
-------------

TOOLKIT

  * General

- New generic bucket, object, and multi-threaded service classes for 
  interacting with either of the S3 or Google Storage services.
- No long compatible with JDK 1.4. JDK 6+ is now required to run JetS3t.
- Removed antiquated and unsupported SOAP S3 service implementation
  from toolkit.
- FileComparer and related tools are now compatible with both S3 and
  Google Storage services.
- FileComparer tool, and therefore all JetS3t apps, now uses a trailing
  slash to denote directory placeholder objects in S3 instead of
  the custom "application/x-directory" content-type. This should
  improve compatibility with other storage management tools, especially
  Amazon's AWS Console.
  
  * JetS3t Property File changes

- Renamed "s3service.internal-error-retry-max"  
  to "storage-service.internal-error-retry-max"
- Renamed "s3service.stream-retry-buffer-size"
  to "uploads.stream-retry-buffer-size"
- Renamed "s3service.defaultStorageClass" 
  to "s3service.default-storage-class"
- Added properties for new ThreadedStorageService:
  "threaded-service.max-thread-count"
  "threaded-service.admin-max-thread-count"
  "threaded-service.ignore-exceptions-in-multi"
  
  * ThreadedStorageService / SimpleThreadedStorageService

- New multi-threaded service classes that allow operations to be 
  performed in bulk on either the RestS3Service or GoogleStorageService
  service implementations.

  * GoogleStorageService
